overlapping content solved

--- a/src/css/CommunitySportsContent.css
+++ b/src/css/CommunitySportsContent.css
@@ -14,6 +14,16 @@
     padding-top: 10%;
   }
 }
+@media screen and (min-width: 1920px) {
+  .Comm-container > .block-container {
+    padding-top: 15%;
+  }
+}
+@media screen and (min-width: 2160px) {
+  .Comm-container > .block-container {
+    padding-top: 20%;
+  }
+}
 
 .Comm-container .container {
   width: 80% !important;
